add delay to processes; improvements